--- a/site/scss/_section.scss
+++ b/site/scss/_section.scss
@@ -37,8 +37,8 @@
     }
 
     .site-section__default-content {
-        column-gap: 2em;
-        columns: 100px 2;
+        column-gap: 1.5%;
+        columns: 2;
     }
 
     .site-section--default {
@@ -50,14 +50,14 @@
     .site-section--agenda {
         max-height: 75vh;
         min-width: 250px;
-        width: 20%;
+        width: 25%;
     }
 
     .site-section--archive {
         max-height: 75vh;
         min-height: 300px;
         min-width: 250px;
-        width: 20%;
+        width: 25%;
     }
 
     .site-section--contact {
