--- a/site/scss/_vars.scss
+++ b/site/scss/_vars.scss
@@ -1,7 +1,7 @@
 $main-font: 'Gza Seminegra', 'Times', 'Times New Roman', serif;
 
 $baseline: 8px;
-$base-font-size: 7px;
+$base-font-size: 8px;
 
 $font-sizes: (
     h1: $base-font-size * 4,
